docs/configuration/v1.x/metrics/api-management.md
---
layout: default
title: Azure API Management Declaration
---

## Azure API Management - ![Availability Badge](https://img.shields.io/badge/Available%20Starting-v1.3-green.svg)

You can scrape an Azure API Management via the `ApiManagement`
 resource type.

The following fields need to be provided:

- `instanceName` - The name of the Azure API Management instance.
- `locationName` - The name of the regional deployment of the gateway. (optional)

All supported metrics are documented in the official [Azure Monitor documentation](https://docs.microsoft.com/en-us/azure/azure-monitor/platform/metrics-supported#microsoftapimanagementservice).

### Multi-region support

Azure API Management instances can be deployed to multiple regions across the world.

Promitor supports different scenarios:

1. Report metrics for metrics for all locations (default)
2. Scope metric to a single region by configuring `locationName`.
3. Report metrics but split it across all regions by using the `Location` dimension.

The following scraper-specific metric label will be added for scenario 2 & 3:

- `location` - Name of the location

Example:

```yaml
name: promitor_demo_azureapimanagement_capacity
description: "The amount of capacity used an Azure API Management instance."
resourceType: ApiManagement
azureMetricConfiguration:
  metricName: Capacity
  aggregation:
    type: Average
resources:
- instanceName: promitor-api-gateway
```

<!-- markdownlint-disable MD033 -->
[&larr; back to metrics declarations](/configuration/v1.x/metrics)<br />
[&larr; back to introduction](/)
<!-- markdownlint-enable -->
